Replace Feed primary key type unit with UUID
