# docs/swagger.json
@@ -72,7 +72,7 @@
                 "summary": "Delete a feed",
                 "parameters": [
                     {
-                        "type": "integer",
+                        "type": "string",
                         "description": "Feed ID",
                         "name": "id",
                         "in": "path",
@@ -102,13 +102,7 @@
         "model.Feed": {
             "type": "object",
             "properties": {
-                "createdAt": {
-                    "type": "string"
-                },
                 "id": {
-                    "type": "integer"
-                },
-                "updatedAt": {
                     "type": "string"
                 },
                 "url": {
